OASIS XML Catalog V1.0 to V1.1